Add Dividers to Action Bar and Tabs
This commit adds dividers to items on the Action Bar
and Tabs:

- Created LinearLayoutICS which extends from the
  standard LinearLayout, and adds support for divider.
- Added relevant attributes for divider support.
- Remove unused drawable.
- Renamed divider drawables to match holo naming.

This commit also fixes the bug that we had some ICS
attributes set in the v7 resources. While it built
fine, Eclipse showed errors.

Change-Id: Ib23ede896b9e87180889bf49a562b4926a9a8838
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values/attrs.xml
+++ b/v7/appcompat/res/values/attrs.xml
@@ -451,8 +451,19 @@
         <attr name="disableChildrenWhenDisabled" format="boolean" />
     </declare-styleable>
 
-
-    <attr name="dividerPadding" format="dimension"/>
+    <declare-styleable name="LinearLayoutICS">
+        <!-- Drawable to use as a vertical divider between buttons. -->
+        <attr name="divider" />
+        <!-- Setting for which dividers to show. -->
+        <attr name="showDividers">
+            <flag name="none" value="0" />
+            <flag name="beginning" value="1" />
+            <flag name="middle" value="2" />
+            <flag name="end" value="4" />
+        </attr>
+        <!-- Size of padding on either end of a divider. -->
+        <attr name="dividerPadding" format="dimension" />
+    </declare-styleable>
 
     <!-- Default Spinner style. -->
     <attr name="spinnerStyle" format="reference" />
