--- a/v7/appcompat/res/layout/abc_action_bar_tabbar.xml
+++ b/v7/appcompat/res/layout/abc_action_bar_tabbar.xml
@@ -14,8 +14,9 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              style="?attr/actionBarTabBarStyle"/>
+<android.support.v7.internal.widget.LinearLayoutICS
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        style="?attr/actionBarTabBarStyle"/>
