--- a/v7/appcompat/res/layout/abc_action_menu_layout.xml
+++ b/v7/appcompat/res/layout/abc_action_menu_layout.xml
@@ -19,6 +19,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:divider="?attr/actionBarDivider"
+        app:divider="?attr/actionBarDivider"
         app:dividerPadding="12dip"
         android:gravity="center_vertical"/>
