--- a/v7/appcompat/res/values/styles_base.xml
+++ b/v7/appcompat/res/values/styles_base.xml
@@ -23,7 +23,7 @@
 
     <style name="Widget.AppCompat.Base.ActionBar" parent="">
         <item name="displayOptions">useLogo|showHome|showTitle</item>
-        <item name="divider">@drawable/abc_action_bar_divider</item>
+        <item name="divider">?attr/dividerVertical</item>
         <item name="height">?attr/actionBarSize</item>
         <item name="homeLayout">@layout/abc_action_bar_home</item>
 
@@ -46,9 +46,6 @@
         <item name="background">@drawable/abc_ab_transparent_light_holo</item>
         <item name="backgroundStacked">@drawable/abc_ab_stacked_transparent_light_holo</item>
         <item name="backgroundSplit">@drawable/abc_ab_bottom_transparent_light_holo</item>
-
-        <item name="progressBarStyle">@style/Widget.AppCompat.ProgressBar.Horizontal</item>
-        <item name="indeterminateProgressStyle">@style/Widget.AppCompat.ProgressBar</item>
     </style>
 
     <style name="Widget.AppCompat.Base.ActionBar.Solid" parent="Widget.AppCompat.Base.ActionBar">
@@ -104,9 +101,9 @@
     </style>
 
     <style name="Widget.AppCompat.Base.ActionBar.TabBar" parent="">
-        <item name="android:divider">?attr/actionBarDivider</item>
-        <item name="android:showDividers">middle</item>
-        <item name="android:dividerPadding">12dip</item>
+        <item name="divider">?attr/actionBarDivider</item>
+        <item name="showDividers">middle</item>
+        <item name="dividerPadding">12dip</item>
     </style>
 
     <style name="Widget.AppCompat.Light.Base.ActionBar.TabBar"
@@ -137,7 +134,6 @@
         <item name="android:textColor">?android:attr/textColorPrimaryDisableOnly</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">true</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:maxLines">2</item>
     </style>
