--- a/v7/appcompat/res/values/themes_base.xml
+++ b/v7/appcompat/res/values/themes_base.xml
@@ -61,7 +61,7 @@
         <item name="actionMenuTextAppearance">
             @style/TextAppearance.AppCompat.Widget.ActionBar.Menu
         </item>
-        <item name="actionMenuTextColor">?android:attr/textColorPrimary</item>
+        <item name="actionMenuTextColor">?android:attr/textColorPrimaryDisableOnly</item>
 
         <!-- Dropdown Spinner Attributes -->
         <item name="actionDropDownStyle">@style/Widget.AppCompat.Spinner.DropDown.ActionBar</item>
@@ -78,6 +78,8 @@
         <!-- Panel attributes -->
         <item name="panelMenuListWidth">@dimen/panel_menu_list_width</item>
         <item name="panelMenuListTheme">@style/Theme.AppCompat.CompactMenu</item>
+        <item name="android:panelBackground">@drawable/abc_menu_hardkey_panel_holo_dark</item>
+        <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_dark</item>
 
     </style>
 
@@ -121,7 +123,7 @@
         <item name="actionMenuTextAppearance">
             @style/TextAppearance.AppCompat.Widget.ActionBar.Menu
         </item>
-        <item name="actionMenuTextColor">?android:attr/textColorPrimary</item>
+        <item name="actionMenuTextColor">?android:attr/textColorPrimaryDisableOnly</item>
 
         <!-- Action Mode -->
         <item name="actionModeStyle">@style/Widget.AppCompat.ActionMode</item>
@@ -142,6 +144,8 @@
         <!-- Panel attributes -->
         <item name="panelMenuListWidth">@dimen/panel_menu_list_width</item>
         <item name="panelMenuListTheme">@style/Theme.AppCompat.CompactMenu</item>
+        <item name="android:panelBackground">@drawable/abc_menu_hardkey_panel_holo_light</item>
+        <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_light</item>
 
     </style>
 
@@ -159,7 +163,7 @@
         </item>
         <item name="actionBarTabTextStyle">@style/Widget.AppCompat.Light.ActionBar.TabText.Inverse
         </item>
-        <item name="actionMenuTextColor">?android:attr/textColorPrimaryInverse</item>
+        <item name="actionMenuTextColor">?android:attr/textColorPrimaryInverseDisableOnly</item>
 
         <!-- Action Mode -->
         <item name="actionModeStyle">@style/Widget.AppCompat.Light.ActionMode.Inverse</item>
@@ -172,15 +176,18 @@
         <!-- Dropdown Spinner Attributes -->
         <item name="actionDropDownStyle">@style/Widget.AppCompat.Spinner.DropDown.ActionBar</item>
 
+        <!-- Panel attributes -->
+        <item name="android:panelBackground">@drawable/abc_menu_hardkey_panel_holo_dark</item>
+        <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_dark</item>
+
     </style>
 
     <!-- Menu/item attributes -->
     <style name="Theme.AppCompat.Base.CompactMenu" parent="">
         <item name="android:itemTextAppearance">
             @style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item</item>
-        <item name="android:listViewStyle">@android:style/Widget.ListView.Menu</item>
+        <item name="android:listViewStyle">@style/Widget.AppCompat.ListView.Menu</item>
     </style>
-
 
     <style name="Theme.AppCompat.Base.CompactMenu.Dialog" parent="">
         <item name="android:itemTextAppearance">
