--- a/v7/appcompat/res/values-large/bools.xml
+++ b/v7/appcompat/res/values-large/bools.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <bool name="split_action_bar_is_narrow">false</bool>
+    <bool name="action_bar_embed_tabs_pre_jb">true</bool>
 </resources>
