Fix Overflow drawable used for Light.DarkActionBar
Bug #8854365

Change-Id: Ie428d2bd60e6938955b1840443c49c1164dc34de
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values/themes_base.xml
+++ b/v7/appcompat/res/values/themes_base.xml
@@ -153,6 +153,7 @@
     <style name="Theme.Base.AppCompat.Light.DarkActionBar" parent="Theme.Base.AppCompat.Light">
         <item name="homeAsUpIndicator">@drawable/abc_ic_ab_back_holo_dark</item>
 
+        <item name="actionOverflowButtonStyle">@style/Widget.AppCompat.ActionButton.Overflow</item>
         <item name="actionBarStyle">@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse</item>
         <item name="actionBarWidgetTheme">@style/Theme.AppCompat</item>
         <item name="actionBarDivider">@drawable/abc_list_divider_holo_dark</item>
