Add a theme attribute to distinguish light from dark.
Bug: 8175766
Change-Id: I6b9c1f25519ccdc9ad0192f3b3f6fc44f76c13d3

--- a/v7/appcompat/res/values/attrs.xml
+++ b/v7/appcompat/res/values/attrs.xml
@@ -474,5 +474,6 @@
     <!-- Default Spinner style. -->
     <attr name="spinnerDropDownItemStyle" format="reference" />
 
-
+    <!-- Specifies whether the theme is light, otherwise it is dark. -->
+    <attr name="isLightTheme" format="boolean" />
 </resources>
