MediaRouter UI tweaks.
Fix a couple of styling issues.
Fix an NPE when a provider is removed.

Bug: 8175766
Change-Id: I109bc93e94d4a05924ae01189911d2418660d0f3

--- a/v7/mediarouter/res/layout/media_route_controller_dialog.xml
+++ b/v7/mediarouter/res/layout/media_route_controller_dialog.xml
@@ -60,6 +60,7 @@
     <Button android:id="@+id/media_route_disconnect_button"
             android:layout_width="fill_parent"
             android:layout_height="56dp"
+            style="?android:attr/buttonBarButtonStyle"
             android:gravity="center"
             android:text="@string/media_route_controller_disconnect" />
 </LinearLayout>
