Streamline media router API.
Merge progress and status and remove ACTION_GET_PROGRESS.

Add a new MediaItemStatus object to ensure that apps package the
status information correctly into the Bundle and to remove
possible ambiguity about the interpretation of each field.

Add EXTRA_ITEM_STATUS as a standard output result from
most requests include ACTION_PLAY, ACTION_PAUSE, etc.

Add a timestamp to the status object.

Add a mechanism for returning an error string from failed
media control requests.

Add a unique prefix to all mediarouter library resources
to make conflicts with application resources less likely.

Bug: 8175766
Change-Id: Ifca759424125ca62e8a72d35068dd3cc045d21ad

--- a/v7/mediarouter/res/drawable/mr_ic_media_route_holo_light.xml
+++ b/v7/mediarouter/res/drawable/mr_ic_media_route_holo_light.xml
@@ -14,11 +14,12 @@
      limitations under the License.
 -->
 
-<animation-list
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:oneshot="false">
-    <item android:drawable="@drawable/ic_media_route_on_0_holo_light" android:duration="500" />
-    <item android:drawable="@drawable/ic_media_route_on_1_holo_light" android:duration="500" />
-    <item android:drawable="@drawable/ic_media_route_on_2_holo_light" android:duration="500" />
-    <item android:drawable="@drawable/ic_media_route_on_1_holo_light" android:duration="500" />
-</animation-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true" android:state_enabled="true"
+            android:drawable="@drawable/mr_ic_media_route_on_holo_light" />
+    <item android:state_checkable="true" android:state_enabled="true"
+            android:drawable="@drawable/mr_ic_media_route_connecting_holo_light" />
+    <item android:state_enabled="true"
+            android:drawable="@drawable/mr_ic_media_route_off_holo_light" />
+    <item android:drawable="@drawable/mr_ic_media_route_disabled_holo_light" />
+</selector>
