--- a/v7/mediarouter/res/drawable/mr_ic_media_route_connecting_holo_dark.xml
+++ b/v7/mediarouter/res/drawable/mr_ic_media_route_connecting_holo_dark.xml
@@ -14,12 +14,11 @@
      limitations under the License.
 -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:state_enabled="true"
-            android:drawable="@drawable/ic_media_route_on_holo_dark" />
-    <item android:state_checkable="true" android:state_enabled="true"
-            android:drawable="@drawable/ic_media_route_connecting_holo_dark" />
-    <item android:state_enabled="true"
-            android:drawable="@drawable/ic_media_route_off_holo_dark" />
-    <item android:drawable="@drawable/ic_media_route_disabled_holo_dark" />
-</selector>
+<animation-list
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:oneshot="false">
+    <item android:drawable="@drawable/mr_ic_media_route_on_0_holo_dark" android:duration="500" />
+    <item android:drawable="@drawable/mr_ic_media_route_on_1_holo_dark" android:duration="500" />
+    <item android:drawable="@drawable/mr_ic_media_route_on_2_holo_dark" android:duration="500" />
+    <item android:drawable="@drawable/mr_ic_media_route_on_1_holo_dark" android:duration="500" />
+</animation-list>
