--- a/v7/appcompat/res/drawable/abc_textfield_searchview_holo_dark.xml
+++ b/v7/appcompat/res/drawable/abc_textfield_searchview_holo_dark.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
+<!-- Copyright (C) 2013 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +13,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <color name="transparent">#00000000</color>
 
-    <color name="search_url_text_normal">#7fa87f</color>
-    <color name="search_url_text_selected">@android:color/black</color>
-    <color name="search_url_text_pressed">@android:color/black</color>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true"
+        android:drawable="@drawable/abc_textfield_search_selected_holo_dark" />
+    <item android:drawable="@drawable/abc_textfield_search_default_holo_dark" />
+</selector>
+
