Rename remaining resources to use abc_ prefix
Bug: 9100364

Change-Id: I93332ecaf1e8d5234acf005e263c6c0309e6413f
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values-large/config.xml
+++ b/v7/appcompat/res/values-large/config.xml
@@ -23,8 +23,8 @@
     <!-- Whether action menu items should obey the "withText" showAsAction.
          This may be set to false for situations where space is
          extremely limited. -->
-    <bool name="config_allowActionMenuItemTextWithIcon">true</bool>
+    <bool name="abc_config_allowActionMenuItemTextWithIcon">true</bool>
 
     <!-- see comment in values/config.xml -->
-    <dimen name="config_prefDialogWidth">440dp</dimen>
+    <dimen name="abc_config_prefDialogWidth">440dp</dimen>
 </resources>
