--- a/v7/appcompat/res/drawable/abc_item_background_holo_dark.xml
+++ b/v7/appcompat/res/drawable/abc_item_background_holo_dark.xml
@@ -22,5 +22,5 @@
     <item android:state_focused="true"                                android:state_pressed="true" android:drawable="@drawable/abc_list_selector_background_transition_holo_dark" />
     <item android:state_focused="false"                               android:state_pressed="true" android:drawable="@drawable/abc_list_selector_background_transition_holo_dark" />
     <item android:state_focused="true"                                                             android:drawable="@drawable/abc_list_focused_holo" />
-    <item                                                                                          android:drawable="@color/transparent" />
+    <item                                                                                          android:drawable="@android:color/transparent" />
 </selector>
