--- a/v7/appcompat/res/drawable/abc_list_selector_holo_dark.xml
+++ b/v7/appcompat/res/drawable/abc_list_selector_holo_dark.xml
@@ -16,7 +16,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_window_focused="false" android:drawable="@color/transparent" />
+    <item android:state_window_focused="false" android:drawable="@android:color/transparent" />
 
     <!-- Even though these two point to the same resource, have two states so the drawable will invalidate itself when coming out of pressed state. -->
     <item android:state_focused="true"  android:state_enabled="false" android:state_pressed="true" android:drawable="@drawable/abc_list_selector_disabled_holo_dark" />
