--- a/v7/appcompat/res/layout/abc_action_mode_close_item.xml
+++ b/v7/appcompat/res/layout/abc_action_mode_close_item.xml
@@ -19,7 +19,7 @@
               android:focusable="true"
               android:clickable="true"
               android:paddingLeft="8dip"
-              android:contentDescription="@string/action_mode_done"
+              android:contentDescription="@string/abc_action_mode_done"
               style="?attr/actionModeCloseButtonStyle"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
