--- a/v7/appcompat/res/values-sw600dp/config.xml
+++ b/v7/appcompat/res/values-sw600dp/config.xml
@@ -21,5 +21,5 @@
      for different hardware and product builds. -->
 <resources>
     <!-- see comment in values/config.xml -->
-    <dimen name="config_prefDialogWidth">580dp</dimen>
+    <dimen name="abc_config_prefDialogWidth">580dp</dimen>
 </resources>
