--- a/v7/appcompat/res/values/colors.xml
+++ b/v7/appcompat/res/values/colors.xml
@@ -14,9 +14,7 @@
      limitations under the License.
 -->
 <resources>
-    <color name="transparent">#00000000</color>
-
-    <color name="search_url_text_normal">#7fa87f</color>
-    <color name="search_url_text_selected">@android:color/black</color>
-    <color name="search_url_text_pressed">@android:color/black</color>
+    <color name="abc_search_url_text_normal">#7fa87f</color>
+    <color name="abc_search_url_text_selected">@android:color/black</color>
+    <color name="abc_search_url_text_pressed">@android:color/black</color>
 </resources>
